# prompt-regression-action

./: .gitignore  PRD.md  README.md  action.yml  parking_lot.md  pyproject.toml
.github/workflows/: ci.yml  prompt-regression-example.yml
examples/: examples-regression.jsonl  examples.jsonl  prompt_new.txt  prompt_old.txt
promptreg/: __init__.py  cli.py  harness.py  report.py  runner.py  scorers.py  stats.py
tests/: test_promptreg.py
