[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "promptreg"
version = "0.1.0"
description = "Gate prompt changes in CI on a statistically significant regression. Deterministic core, stdlib-only, offline; optional Claude runner."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Ben Godgart" }]
keywords = ["llm", "evals", "prompt-engineering", "ci", "github-actions", "regression-testing", "claude"]
dependencies = []

[project.optional-dependencies]
anthropic = ["anthropic>=0.40"]

[project.scripts]
promptreg = "promptreg.cli:main"

[project.urls]
Homepage = "https://github.com/bengodgart/prompt-regression-action"

[tool.setuptools]
packages = ["promptreg"]
